add stow to ublue

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,1 +1,63 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/wlogout/style.css
+  window {
+    font-family: JetBrainsMono Nerd Font;
+    font-size: 12pt;
+    color: #abb2bf; /* fg_dark */
+    background-color:  rgba(30, 33, 39, 0.85);
+}
+
+button {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 20%;
+    border: none;
+    color: #abb2bf; /* fg_dark */
+    text-shadow: none;
+    background-color: rgba(30, 33, 39, 0);
+    margin: 5px;
+    transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+}
+
+button:hover {
+    background-color: rgba(50,54,65, 0.5); /* bg3 */
+}
+
+button:focus {
+    background-color: #4fa6ed; /*blue*/
+    color: #1E2127; /* bgDark */
+    text-shadow: none;
+}
+
+#lock {
+    background-image: image(url("./lock.png"));
+}
+#lock:focus {
+    background-image: image(url("./lock-hover.png"));
+}
+
+#logout {
+    background-image: image(url("./logout.png"));
+}
+#logout:focus {
+    background-image: image(url("./logout-hover.png"));
+}
+
+#suspend {
+    background-image: image(url("./sleep.png"));
+}
+#suspend:focus {
+    background-image: image(url("./sleep-hover.png"));
+}
+
+#shutdown {
+    background-image: image(url("./power.png"));
+}
+#shutdown:focus {
+    background-image: image(url("./power-hover.png"));
+}
+
+#reboot {
+    background-image: image(url("./restart.png"));
+}
+#reboot:focus {
+    background-image: image(url("./restart-hover.png"));
+}
