--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,1 +1,163 @@
-/nix/store/qv0qrk17c5vmqd1na1dq6rprvnp5z0vc-home-manager-files/.config/waybar/style.css
+            @define-color black        #0e1013; /* rgba(14, 16, 19, 1) */
+            @define-color bgDark       #1E2127; /* rgba(30, 33, 39, 1) */
+	    @define-color bg0          #1f2329;
+	    @define-color bg1          #282c34;
+	    @define-color bg2          #30363f;
+	    @define-color bg3          #323641;
+	    @define-color bg_d         #181b20;
+	    @define-color bg_blue      #61afef;
+	    @define-color bg_yellow    #e8c88c;
+	    @define-color fg           #a0a8b7;
+            @define-color fg_dark      #abb2bf;
+	    @define-color purple       #bf68d9;
+	    @define-color green        #8ebd6b;
+	    @define-color orange       #cc9057;
+	    @define-color blue         #4fa6ed;
+	    @define-color yellow       #e2b86b;
+	    @define-color cyan         #48b0bd;
+	    @define-color red          #e55561;
+	    @define-color grey         #535965;
+	    @define-color light_grey   #7a818e;
+	    @define-color dark_cyan    #266269;
+	    @define-color dark_red     #8b3434;
+	    @define-color dark_yellow  #835d1a;
+	    @define-color dark_purple  #7e3992;
+	    @define-color diff_add     #272e23;
+            @define-color diff_delete  #2d2223;
+            @define-color diff_change  #172a3a;
+	    @define-color diff_text    #274964;
+
+            * {
+              font-family: Hack Nerd Font;
+              font-size: 16px;
+            }
+
+            window {
+            }
+
+            window#waybar {
+              /*background-color: rgba(31, 35, 41, 1.0);*/
+              background-color: rgba(14, 16, 19, 1.0);
+              transition-property: background-color;
+              transition-duration: 0.5s;
+              border-bottom: 2px solid @bg1;
+            }
+
+            .modules-right {
+              background: transparent;
+            }
+
+            .modules-center {
+              background: transparent;
+            }
+
+            .modules-left {
+              background: transparent;
+            }
+
+            tooltip {
+              background-color: @black;
+              border: 2px solid @bg1;
+              color: @fg_dark;
+              border-radius: 10px;
+            }
+            
+            tooltip label {
+              color: @fg_dark;
+            }
+
+            #workspaces {
+              background: transparent;
+            }
+
+            #workspaces button {
+                background: transparent;
+                color: @light_grey;
+                font-weight: bold;
+                border: none;
+            }
+
+            #workspaces button:hover {
+                color: @fg;
+                background: transparent;
+            }
+
+            #workspaces button.active {
+              color: @black;
+              background: @fg;
+              border-radius: 5px;
+              border: 2px solid @bg1;
+              margin: 4px 0 6px 0;
+              /*background: transparent;*/
+            }
+
+            #taskbar button {
+              background: transparent;
+              border: none;
+            }
+
+            #taskbar button.active {
+              background: transparent;
+            }
+
+            button.urgent {
+                color: @red;
+                background: @black;
+                border-radius: 10px;
+            }
+
+            #custom-sep {
+              color: @black;
+            }
+
+            #custom-session {
+              color: @text;
+              font-size: 18px;
+            }
+
+            #window {
+              color: @fg_dark;
+            }
+
+            #clock {
+              margin-right: 10px;
+            }
+
+            #pulseaudio,
+            #wireplumber,
+            #battery,
+            #custom-clipboard,
+            #custom-menu,
+            #backlight,
+            #idle_inhibitor,
+            #network,
+            #clock,
+            #trayu
+            #custom-session,
+            #custom-recorder,
+            #bluetooth,
+            #cpu,
+            #disk,
+            #memory,
+            #temperature {
+              color: @fg_dark;
+              min-width: 13px;
+              margin-right: 10px;
+              padding: 0px 5px 0px 5px;
+            }
+
+            #bluetooth.connected {
+              color: @green;
+            }
+
+            #battery.warning:not(.charging) {
+              color: @orange;
+            }
+            
+            #battery.critical:not(.charging) {
+              color: @red;
+            }
+
+            #custom-recorder.enabled {
+              color: @green;
+            }
