--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,39 +1,40 @@
-            @define-color black        #0e1013; /* rgba(14, 16, 19, 1) */
-            @define-color bgDark       #1E2127; /* rgba(30, 33, 39, 1) */
-	    @define-color bg0          #1f2329;
-	    @define-color bg1          #282c34;
-	    @define-color bg2          #30363f;
-	    @define-color bg3          #323641;
-	    @define-color bg_d         #181b20;
-	    @define-color bg_blue      #61afef;
-	    @define-color bg_yellow    #e8c88c;
-	    @define-color fg           #a0a8b7;
-            @define-color fg_dark      #abb2bf;
-	    @define-color purple       #bf68d9;
-	    @define-color green        #8ebd6b;
-	    @define-color orange       #cc9057;
-	    @define-color blue         #4fa6ed;
-	    @define-color yellow       #e2b86b;
-	    @define-color cyan         #48b0bd;
-	    @define-color red          #e55561;
-	    @define-color grey         #535965;
-	    @define-color light_grey   #7a818e;
-	    @define-color dark_cyan    #266269;
-	    @define-color dark_red     #8b3434;
-	    @define-color dark_yellow  #835d1a;
-	    @define-color dark_purple  #7e3992;
-	    @define-color diff_add     #272e23;
-            @define-color diff_delete  #2d2223;
-            @define-color diff_change  #172a3a;
-	    @define-color diff_text    #274964;
+            @define-color black #0e1013;
+            /* rgba(14, 16, 19, 1) */
+            @define-color bgDark #1E2127;
+            /* rgba(30, 33, 39, 1) */
+            @define-color bg0 #1f2329;
+            @define-color bg1 #282c34;
+            @define-color bg2 #30363f;
+            @define-color bg3 #323641;
+            @define-color bg_d #181b20;
+            @define-color bg_blue #61afef;
+            @define-color bg_yellow #e8c88c;
+            @define-color fg #a0a8b7;
+            @define-color fg_dark #abb2bf;
+            @define-color purple #bf68d9;
+            @define-color green #8ebd6b;
+            @define-color orange #cc9057;
+            @define-color blue #4fa6ed;
+            @define-color yellow #e2b86b;
+            @define-color cyan #48b0bd;
+            @define-color red #e55561;
+            @define-color grey #535965;
+            @define-color light_grey #7a818e;
+            @define-color dark_cyan #266269;
+            @define-color dark_red #8b3434;
+            @define-color dark_yellow #835d1a;
+            @define-color dark_purple #7e3992;
+            @define-color diff_add #272e23;
+            @define-color diff_delete #2d2223;
+            @define-color diff_change #172a3a;
+            @define-color diff_text #274964;
 
             * {
               font-family: Hack Nerd Font;
               font-size: 16px;
             }
 
-            window {
-            }
+            window {}
 
             window#waybar {
               /*background-color: rgba(31, 35, 41, 1.0);*/
@@ -61,25 +62,26 @@
               color: @fg_dark;
               border-radius: 10px;
             }
-            
+
             tooltip label {
               color: @fg_dark;
             }
 
             #workspaces {
+              margin-left: 10px;
               background: transparent;
             }
 
             #workspaces button {
-                background: transparent;
-                color: @light_grey;
-                font-weight: bold;
-                border: none;
+              background: transparent;
+              color: @light_grey;
+              font-weight: bold;
+              border: none;
             }
 
             #workspaces button:hover {
-                color: @fg;
-                background: transparent;
+              color: @fg;
+              background: transparent;
             }
 
             #workspaces button.active {
@@ -101,9 +103,9 @@
             }
 
             button.urgent {
-                color: @red;
-                background: @black;
-                border-radius: 10px;
+              color: @red;
+              background: @black;
+              border-radius: 10px;
             }
 
             #custom-sep {
@@ -132,8 +134,7 @@
             #idle_inhibitor,
             #network,
             #clock,
-            #trayu
-            #custom-session,
+            #trayu #custom-session,
             #custom-recorder,
             #bluetooth,
             #cpu,
@@ -153,7 +154,7 @@
             #battery.warning:not(.charging) {
               color: @orange;
             }
-            
+
             #battery.critical:not(.charging) {
               color: @red;
             }
